# internal/daemon/worker/api/api.go
@@ -4,48 +4,41 @@ import (
 	"context"
 	"errors"
 
+	"google.golang.org/grpc"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 
 	workersvcv1 "github.com/davidsbond/orca/internal/proto/orca/worker/service/v1"
-	"github.com/davidsbond/orca/pkg/task"
-	"github.com/davidsbond/orca/pkg/workflow"
 )
 
 type (
 	API struct {
 		workersvcv1.UnimplementedWorkerServiceServer
 
-		registry  Registry
-		scheduler Scheduler
+		service Service
 	}
 
-	Registry interface {
-		GetWorkflow(name string) (workflow.Workflow, bool)
-		GetTask(name string) (task.Task, bool)
-	}
-
-	Scheduler interface {
-		ScheduleWorkflow(ctx context.Context, runID string, workflow workflow.Workflow, input []byte) error
-		ScheduleTask(ctx context.Context, runID string, task task.Task, input []byte) error
+	Service interface {
+		ScheduleWorkflow(ctx context.Context, name string, runID string, input []byte) error
+		ScheduleTask(ctx context.Context, name string, runID string, input []byte) error
 	}
 )
 
-func NewAPI(registry Registry, scheduler Scheduler) *API {
+func New(service Service) *API {
 	return &API{
-		registry:  registry,
-		scheduler: scheduler,
+		service: service,
 	}
 }
 
-func (api *API) RunWorkflow(ctx context.Context, request *workersvcv1.RunWorkflowRequest) (*workersvcv1.RunWorkflowResponse, error) {
-	wf, ok := api.registry.GetWorkflow(request.GetWorkflowName())
-	if !ok {
-		return nil, status.Errorf(codes.NotFound, "workflow %s is not registered on this worker", request.GetWorkflowName())
-	}
+func (api *API) Register(r grpc.ServiceRegistrar) {
+	workersvcv1.RegisterWorkerServiceServer(r, api)
+}
 
-	err := api.scheduler.ScheduleWorkflow(ctx, request.GetWorkflowRunId(), wf, request.GetParameters())
+func (api *API) RunWorkflow(ctx context.Context, request *workersvcv1.RunWorkflowRequest) (*workersvcv1.RunWorkflowResponse, error) {
+	err := api.service.ScheduleWorkflow(ctx, request.GetWorkflowName(), request.GetWorkflowRunId(), request.GetInput())
 	switch {
+	case errors.Is(err, ErrNotFound):
+		return nil, status.Errorf(codes.NotFound, "workflow %s is not registered on this worker", request.GetWorkflowName())
 	case errors.Is(err, context.Canceled):
 		return nil, status.Errorf(codes.Canceled, "recieved cancellation while scheduling workflow %s", request.GetWorkflowName())
 	case errors.Is(err, context.DeadlineExceeded):
@@ -58,13 +51,10 @@ func (api *API) RunWorkflow(ctx context.Context, request *workersvcv1.RunWorkflo
 }
 
 func (api *API) RunTask(ctx context.Context, request *workersvcv1.RunTaskRequest) (*workersvcv1.RunTaskResponse, error) {
-	tsk, ok := api.registry.GetTask(request.GetTaskName())
-	if !ok {
-		return nil, status.Errorf(codes.NotFound, "task %s is not registered on this worker", request.GetTaskName())
-	}
-
-	err := api.scheduler.ScheduleTask(ctx, request.GetTaskRunId(), tsk, request.GetParameters())
+	err := api.service.ScheduleTask(ctx, request.GetTaskName(), request.GetTaskRunId(), request.GetInput())
 	switch {
+	case errors.Is(err, ErrNotFound):
+		return nil, status.Errorf(codes.NotFound, "task %s is not registered on this worker", request.GetTaskName())
 	case errors.Is(err, context.Canceled):
 		return nil, status.Errorf(codes.Canceled, "recieved cancellation while scheduling task %s", request.GetTaskName())
 	case errors.Is(err, context.DeadlineExceeded):
